--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Staatliches&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
-    <title>ihobbies</title>
+    <link rel="shortcut icon" href="css/imagens-head/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="css/imagens-head/favicon.ico" type="image/x-icon">
+    <title>iHobbies</title>
 </head>
 <body>
     <header>
